--- a/prime_home/templates/prime_home/index/contact_us_section.html
+++ b/prime_home/templates/prime_home/index/contact_us_section.html
@@ -8,9 +8,23 @@
                         <h3 class="display-4 fw-bold mb-5 text-dark">Want to study korean language?</h3>
                         <h4 class="mb-3 text-dark">Visit us at</h4>
                         <p>
-address<br>
-address<br>
-address</p>
+                            3rd Floor, Yusay Incorporated Building,Lacao St. Puerto Princesa City, Palawan
+                        </p>
+                        <p>
+                            3rd Floor Ramcor Building, P. Burgos St., Butuan City
+                        </p>
+                        <p>
+                            Room 305, 3rd Floor,  Virsco Home Depot,  888 Building  Rosales Blvd.,  Calbayog City.
+                        </p>
+                        <p>
+                            Room 308, 3rd Floor, Doña Luisa Building Fuente Osmena Circle, Cebu City. 
+                        </p>
+                        <p>
+                            Room 4B, 4th Floor, Catjoy Building, P.Burgos St. Tacloban City.
+                        </p>
+                        <p>
+                            Room 201 A. 2nd floor,. Saint Jude Building, Gallares St., Corner H Grupo St., Tagbilaran City.
+                        </p>
                         <h4 class="mb-3 text-dark">Connect at</h4>
                         <ul class="list-unstyled mb-0"> 
                             <li class="mb-1"> 
