--- a/prime_home/templates/prime_home/index/welcome_section.html
+++ b/prime_home/templates/prime_home/index/welcome_section.html
@@ -4,7 +4,7 @@
         <div data-aos="fade-up" class="align-items-center row">
             <div class="col-lg-6 pb-3 pt-3">
                 <h1 class="display-4 font-weight-bold mb-3">Prime Korean Language and Review Center Inc.</h1>
-                <p class="font-weight-light lead mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec volutpat sem ac elit rutrum rhoncus. </p>
+                <p class="font-weight-light lead mb-4">...</p>
                 <!-- <a class="btn btn-outline-light pl-4 pr-4 rounded-pill" href="{{url_for('prime_home.pre_register')}}">Pre-register</a> -->
                 <a id="btn_contact_now" class="btn btn-light ml-2 pl-4 pr-4 rounded-pill" href="#">Contact Now</a>
             </div>
