--- a/prime_home/templates/prime_home/index/services_section.html
+++ b/prime_home/templates/prime_home/index/services_section.html
@@ -21,7 +21,7 @@
                                     </g>                                                     
                                 </svg>
                                 <h4>Learn Korean</h4>
-                                <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vitae congue tortor.</p>
+                                <p class="mb-0">PRIME KOREAN LANGUAGE AND REVIEW CENTER IS OFFERING THE BEST SERVICE FOR THOSE INTERESTED TO LEARN "HANGUL"</p>
                             </div>                                     
                         </div>                                 
                     </div>                             
@@ -35,7 +35,7 @@
                                     </g>                                                     
                                 </svg>
                                 <h4>Work in South Korea</h4>
-                                <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vitae congue tortor.</p>
+                                <p class="mb-0">SOUTH KOREAN IS GENERALLY REGARD AS SOME OF THE MOST TECHNOLOGICALLY WELL ADJUST PEOPLE IN THE WORLD.</p>
                             </div>                                     
                         </div>                                 
                     </div>
