--- a/prime_home/templates/prime_home/footer.html
+++ b/prime_home/templates/prime_home/footer.html
@@ -4,8 +4,7 @@
             <div class="col-xl-4 mr-auto py-3">
                 <a href="#" class="d-inline-block h2 mb-4 text-decoration-none text-uppercase text-white-50"> Prime
                     Korean Language </a>
-                <p class="mb-3"> Duis pharetra venenatis felis, ut tincidunt ipsum consequat nec. Fusce et porttitor
-                    libero, eu aliquam nisi. Nam finibus ullamcorper semper.</p>
+                <p class="mb-3"> Offers a lot of services like learning how to speak korean as fluent as the native Koreans, improving your listening skills, writting and reading, We are also assisting Filipino's to pass the EPS-TOPIK exam for those who wants to work in South Korea</p>
                 <div class="mb-4">
                     <a href="#" class="text-white">+1 234 567-890</a>
                     <br>
