--- a/prime_home/templates/prime_home/contact_us_page.html
+++ b/prime_home/templates/prime_home/contact_us_page.html
@@ -7,7 +7,7 @@
 {% block content %}
 <section class="primary-color pt-5 text-white">
     <div class="container mb-4 py-5">
-        <h1 class="display-5 fw-bold">Contact Us</h1>
+        <h1 class="display-5 fw-bold">Want to study korean language?</h1>
         <p class="fs-3 mb-0">Say hello, we&apos;d love to hear from you.</p>
     </div>
     <svg viewBox="0 0 1440 185" preserveAspectRatio="none" fill="rgb(0, 97, 168)" version="1.1" xmlns="http://www.w3.org/2000/svg" class="bg-white d-block text-primary" width="100%" height="160">
@@ -22,7 +22,8 @@
                 <div class="bg-light p-5">
                     <div class="py-3">
                         <h2 class="h5 text-primary">Get in Touch</h2>
-                        <h3 class="display-4 fw-bold mb-5 text-dark">Want to study korean language?</h3>
+                        <h3 class="display-4 fw-bold mb-5 text-dark">Contact Us</h3>
+                        <h2 class="h5 text-primary">Let those OPPORTUNITIES come to you. PASS THE EPS-TOPIK NOW.</h2>
                         <h4 class="mb-3 text-dark">Visit us at</h4>
                     <p>
                         <h2 class="h5 text-primary">Palawan Branch</h2>
