Align business expenses monthly total

--- a/prime_admin/templates/lms/fund_wallet.html
+++ b/prime_admin/templates/lms/fund_wallet.html
@@ -186,6 +186,11 @@
             dtbl_fund_wallet_statements.ajax.url(`/learning-management/branches/${branchId}/fund-wallet-statements/dt`).load();
             dtbl_add_funds_transactions.ajax.url(`/learning-management/branches/${branchId}/add-funds-transactions/dt`).load();
             dtbl_business_expenses.ajax.url(`/learning-management/branches/${branchId}/expenses-transactions/dt`).load();
+            dtbl_utilities.ajax.url(`/learning-management/branches/${branchId}/utilities/dt`).load();
+            dtbl_office_supply.ajax.url(`/learning-management/branches/${branchId}/office-supply/dt`).load();
+            dtbl_salary.ajax.url(`/learning-management/branches/${branchId}/salary/dt`).load();
+            dtbl_refund.ajax.url(`/learning-management/branches/${branchId}/refund/dt`).load();
+            dtbl_other_expenses.ajax.url(`/learning-management/branches/${branchId}/other-expenses/dt`).load();
         });
 
 
