--- a/prime_home/templates/prime_home/index/testimonials_section.html
+++ b/prime_home/templates/prime_home/index/testimonials_section.html
@@ -7,7 +7,7 @@
                 <div class="carousel-item active">
                     <div class="align-items-center row">
                         <div class="col-lg-4 pb-3 pt-3 text-center">
-                            <img src="{{url_for('prime_home.static', filename='img/smiley.png')}}"
+                            <img src="{{url_for('prime_home.static', filename='img/student_testimonies_img/DIONESIO NATINGGA.jpg')}}"
                                 class="img-fluid rounded-circle">
                         </div>
                         <div class="col-lg-8 pb-3 pt-3">
