--- a/prime_home/templates/prime_home/index/testimonials_section.html
+++ b/prime_home/templates/prime_home/index/testimonials_section.html
@@ -27,7 +27,7 @@
                 <div class="carousel-item">
                     <div class="align-items-center row">
                         <div class="col-lg-4 pb-3 pt-3 text-center">
-                            <img src="{{url_for('prime_home.static', filename='img/smiley.png')}}"
+                            <img src="{{url_for('prime_home.static', filename='img/student_testimonies_img/LESLIE GALENZOGA.jpeg')}}"
                                 class="img-fluid rounded-circle">
                         </div>
                         <div class="col-lg-8 pb-3 pt-3">
@@ -50,7 +50,7 @@
                 <div class="carousel-item">
                     <div class="align-items-center row">
                         <div class="col-lg-4 pb-3 pt-3 text-center">
-                            <img src="{{url_for('prime_home.static', filename='img/smiley.png')}}"
+                            <img src="{{url_for('prime_home.static', filename='img/student_testimonies_img/MAR JUN AMISTOSO.jpeg')}}"
                                 class="img-fluid rounded-circle">
                         </div>
                         <div class="col-lg-8 pb-3 pt-3">
