--- a/prime_home/templates/prime_home/testimonies_page.html
+++ b/prime_home/templates/prime_home/testimonies_page.html
@@ -261,43 +261,43 @@
                             <div class="hero featured-carousel owl-carousel">
                                 <div class="item">
                                     <div class="work">
-                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/actual_class/skilltest_01.jpg')}});">
+                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/actual_class/skilltest_01.jpeg')}});">
                                         </div>
                                     </div>
                                 </div>
                                 <div class="item">
                                     <div class="work">
-                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/actual_class/skilltest_02.jpg')}});">
+                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/actual_class/skilltest_02.jpeg')}});">
                                         </div>
                                     </div>
                                 </div>
                                 <div class="item">
                                     <div class="work">
-                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/actual_class/skilltest_04.jpg')}});">
+                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/actual_class/skilltest_04.jpeg')}});">
                                         </div>
                                     </div>
                                 </div>
                                 <div class="item">
                                     <div class="work">
-                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/actual_class/skilltest_05.jpg')}});">
+                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/actual_class/skilltest_05.jpeg')}});">
                                         </div>
                                     </div>
                                 </div>
                                 <div class="item">
                                     <div class="work">
-                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/actual_class/skilltest_06.jpg')}});">
+                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/actual_class/skilltest_06.jpeg')}});">
                                         </div>
                                     </div>
                                 </div>
                                 <div class="item">
                                     <div class="work">
-                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/actual_class/skilltest_07.jpg')}});">
+                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/actual_class/skilltest_07.jpeg')}});">
                                         </div>
                                     </div>
                                 </div>
                                 <div class="item">
                                     <div class="work">
-                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/actual_class/skilltest08.jpg')}});">
+                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/actual_class/skilltest08.jpeg')}});">
                                         </div>
                                     </div>
                                 </div>
