--- a/prime_home/templates/prime_home/index/testimonials_section.html
+++ b/prime_home/templates/prime_home/index/testimonials_section.html
@@ -69,7 +69,7 @@
                 <div class="carousel-item">
                     <div class="align-items-center row">
                         <div class="col-lg-4 pb-3 pt-3 text-center">
-                            <img src="{{url_for('prime_home.static', filename='img/smiley.png')}}"
+                            <img src="{{url_for('prime_home.static', filename='img/student_testimonies_img/JOEY CANALES.jpeg')}}"
                                 class="img-fluid rounded-circle">
                         </div>
                         <div class="col-lg-8 pb-3 pt-3">
@@ -79,7 +79,7 @@
                                     d="M23 1V5.06504C21.9136 5.67931 21.0807 6.43812 20.5012 7.34146C19.958 8.24481 19.5416 9.20235 19.2519 10.2141C18.9621 11.2258 18.8173 12.346 18.8173 13.5745H23V22.4634H14.0914V16.935C14.0914 13.6107 14.3992 11.0813 15.0148 9.34688C15.6667 7.61246 16.6444 6.02258 17.9481 4.57723C19.2519 3.09575 20.9358 1.90334 23 1ZM9.90864 1V5.06504C8.82222 5.67931 7.9893 6.43812 7.40988 7.34146C6.83045 8.24481 6.39588 9.20235 6.10617 10.2141C5.81646 11.2258 5.67161 12.346 5.67161 13.5745H9.90864V22.4634H1V16.935C1 13.6107 1.30782 11.0813 1.92346 9.34688C2.57531 7.61246 3.55309 6.02258 4.85679 4.57723C6.16049 3.09575 7.84444 1.90334 9.90864 1Z" />
                             </svg>
                             <p class="font-weight-light h5 mb-4">Maraming salamat sa prime klc, Kayo ang naging tulay ko upang makapag work dito sa korea. Ngayon po ay 1 year and 6 months na po akong nag tatrabaho dito sa korea as factory worker. Kung di dahil sa inyo wala po ako dito sa korea, I am proud to be prime klc family. Kamsahamnida</p>
-                            <h4 class="font-weight-bold mb-1 text-favorite">WALLY CATALAN
+                            <h4 class="font-weight-bold mb-1 text-favorite">JOEY CANALES
                             </h4>
                             <p class="font-weight-bold">STUDENT</p>
                         </div>
