--- a/prime_home/templates/prime_home/index/testimonials_section.html
+++ b/prime_home/templates/prime_home/index/testimonials_section.html
@@ -69,7 +69,7 @@
                 <div class="carousel-item">
                     <div class="align-items-center row">
                         <div class="col-lg-4 pb-3 pt-3 text-center">
-                            <img src="{{url_for('prime_home.static', filename='img/student_testimonies_img/JOEY CANALES.jpeg')}}"
+                            <img src="{{url_for('prime_home.static', filename='img/student_testimonies_img/JOEY CANALES.jpg')}}"
                                 class="img-fluid rounded-circle">
                         </div>
                         <div class="col-lg-8 pb-3 pt-3">
