--- a/prime_home/templates/prime_home/footer.html
+++ b/prime_home/templates/prime_home/footer.html
@@ -6,9 +6,9 @@
                     Korean Language </a>
                 <p class="mb-3"> Offers a lot of services like learning how to speak korean as fluent as the native Koreans, improving your listening skills, writting and reading, We are also assisting Filipino's to pass the EPS-TOPIK exam for those who wants to work in South Korea</p>
                 <div class="mb-4">
-                    <a href="#" class="text-white">+1 234 567-890</a>
+                    <a href="#" class="text-white">0935 850 8611</a>
                     <br>
-                    <a href="#" class="text-white">hello@company.com</a>
+                    <a href="#" class="text-white">primekoreanlanguage.com</a>
                 </div>
                 <div class="d-inline-flex flex-wrap">
                     <a href="https://www.facebook.com/primekltc" class="p-1 text-white"> <svg viewBox="0 0 24 24" fill="currentColor" width="20"
