--- a/prime_home/templates/prime_home/contact_us_page.html
+++ b/prime_home/templates/prime_home/contact_us_page.html
@@ -52,7 +52,7 @@
                         <h4 class="mb-3 text-dark">Connect at</h4>
                         <ul class="list-unstyled mb-0"> 
                             <li class="mb-1"> 
-                                <a href="mailto:info@company.com" class="link-secondary text-decoration-none">primekoreanlanguage.com</a> 
+                                <a href="mailto:primekoreanlanguage.com" class="link-secondary text-decoration-none">primekoreanlanguage.com</a> 
                             </li>
                             <li class="mb-1"> 
                                 <a href="tel:0935 850 8611" class="link-secondary text-decoration-none">0935 850 8611</a> 
