--- a/prime_home/templates/prime_home/index/welcome_section.html
+++ b/prime_home/templates/prime_home/index/welcome_section.html
@@ -4,7 +4,7 @@
         <div data-aos="fade-up" class="align-items-center row">
             <div class="col-lg-6 pb-3 pt-3">
                 <h1 class="display-4 font-weight-bold mb-3">Prime Korean Language and Review Center Inc.</h1>
-                <p class="font-weight-dark lead mb-4">OFFERS A LOT OF SERVICES LIKE LEARNING HOW TO SPEAK KOREAN AS FLUENT AS THE NATIVE KOREANS, IMPROVING YOUR LISTENING SKILLS, WRITING AND READING, WE ARE ALSO ASSISTING FILIPINO’S TO PASS THE EPS-TOPIK EXAM FOR THOSE WHO WANTS TO WORK IN SOUTH KOREA AS FACTORY WORKERS. WE ARE HELPING FILIPINOS TO ACHIEVE THEIR DREAMS AND FULFILL THEIR GOALS TO LIFT UP THE STATUS OF THEIR LIVING.
+                <p class="font-weight-light lead mb-4 text-secondary">OFFERS A LOT OF SERVICES LIKE LEARNING HOW TO SPEAK KOREAN AS FLUENT AS THE NATIVE KOREANS, IMPROVING YOUR LISTENING SKILLS, WRITING AND READING, WE ARE ALSO ASSISTING FILIPINO’S TO PASS THE EPS-TOPIK EXAM FOR THOSE WHO WANTS TO WORK IN SOUTH KOREA AS FACTORY WORKERS. WE ARE HELPING FILIPINOS TO ACHIEVE THEIR DREAMS AND FULFILL THEIR GOALS TO LIFT UP THE STATUS OF THEIR LIVING.
 WE WANT TO HELP YOU GUYS SEEING AND HAVING A PROGRESSIVE FUTURE WITH US 
 LEARN KOREAN LANGUAGE WITH US!!!!</p>
                 <!-- <a class="btn btn-outline-light pl-4 pr-4 rounded-pill" href="{{url_for('prime_home.pre_register')}}">Pre-register</a> -->
