--- a/prime_home/templates/prime_home/index/testimonials_section.html
+++ b/prime_home/templates/prime_home/index/testimonials_section.html
@@ -110,6 +110,7 @@
                 <li data-target="#carousel7" data-slide-to="1" class="primary-color"></li>
                 <li data-target="#carousel7" data-slide-to="2" class="primary-color"></li>
                 <li data-target="#carousel7" data-slide-to="3" class="primary-color"></li>
+                <li data-target="#carousel7" data-slide-to="4" class="primary-color"></li>
             </ol>
         </div>
     </div>
