--- a/prime_home/templates/prime_home/footer.html
+++ b/prime_home/templates/prime_home/footer.html
@@ -31,7 +31,7 @@
                             <path
                                 d="M6.94 5a2 2 0 1 1-4-.002 2 2 0 0 1 4 .002zM7 8.48H3V21h4V8.48zm6.32 0H9.34V21h3.94v-6.57c0-3.66 4.77-4 4.77 0V21H22v-7.93c0-6.17-7.06-5.94-8.72-2.91l.04-1.68z" />
                         </svg> </a>
-                    <a href="#" class="p-1 text-white"> <svg viewBox="0 0 24 24" fill="currentColor" width="20"
+                    <a href="https://www.youtube.com/watch?v=AXtGLSUk1HQ" class="p-1 text-white"> <svg viewBox="0 0 24 24" fill="currentColor" width="20"
                             height="20">
                             <path
                                 d="M21.543 6.498C22 8.28 22 12 22 12s0 3.72-.457 5.502c-.254.985-.997 1.76-1.938 2.022C17.896 20 12 20 12 20s-5.893 0-7.605-.476c-.945-.266-1.687-1.04-1.938-2.022C2 15.72 2 12 2 12s0-3.72.457-5.502c.254-.985.997-1.76 1.938-2.022C6.107 4 12 4 12 4s5.896 0 7.605.476c.945.266 1.687 1.04 1.938 2.022zM10 15.5l6-3.5-6-3.5v7z" />
