--- a/prime_home/templates/prime_home/index/testimonies_section.html
+++ b/prime_home/templates/prime_home/index/testimonies_section.html
@@ -53,7 +53,7 @@ id="testimonies">
     </div>
     <div id="div_skill_test" data-aos="fade-right" class="align-items-center row">
         <div class="col-lg-4 pb-3 pt-3">
-            <img src="{{url_for('prime_home.static', filename='img/skill_test_1.jpg')}}" width="1175.976" height="500.199"
+            <img src="{{url_for('prime_home.static', filename='img/skilltest_05.jpeg')}}" width="1175.976" height="500.199"
                 viewBox="0 0 1175.976 864.199" class="col-8 col-lg-12 d-block img-fluid ml-auto mr-auto">
         </div>
         <div class="col-lg-6 pb-3 pt-3">
