--- a/prime_home/templates/prime_home/index/testimonies_section.html
+++ b/prime_home/templates/prime_home/index/testimonies_section.html
@@ -28,7 +28,7 @@ id="testimonies">
     </div>
     <div id="div_actual_class" data-aos="fade-right" class="align-items-center row">
         <div class="col-lg-4 pb-3 pt-3">
-            <img src="{{url_for('prime_home.static', filename='img/actual_class_1.jpg')}}" width="1171.07" height="500.585"
+            <img src="{{url_for('prime_home.static', filename='img/actualclass_01.jpg')}}" width="1171.07" height="500.585"
                 viewBox="0 0 1171.07 884.585" class="col-8 col-lg-12 d-block img-fluid ml-auto mr-auto">
         </div>
         <div class="col-lg-6 pb-3 pt-3">
