--- a/prime_home/templates/prime_home/index/testimonies_section.html
+++ b/prime_home/templates/prime_home/index/testimonies_section.html
@@ -40,7 +40,7 @@ id="testimonies">
     </div>
     <div id="div_graduation" data-aos="fade-left" class="align-items-center row">
         <div class="col-lg-4 offset-lg-2 pb-3 pt-3">
-            <img src="{{url_for('prime_home.static', filename='img/graduation_1.jpg')}}" width="1255.003" height="500.707"
+            <img src="{{url_for('prime_home.static', filename='img/graduation_01.jpeg')}}" width="1255.003" height="500.707"
                 viewBox="0 0 1255.003 870.707" class="col-8 col-lg-12 d-block img-fluid ml-auto mr-auto">
         </div>
         <div class="col-lg-6 pb-3 pt-3">
