--- a/prime_home/templates/prime_home/testimonies_page.html
+++ b/prime_home/templates/prime_home/testimonies_page.html
@@ -402,6 +402,12 @@
                                 </div>
                                 <div class="item">
                                     <div class="work">
+                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/departure/departure_01.jpg')}});">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="work">
                                         <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/departure/11.jpg')}});">
                                         </div>
                                     </div>
